# flat-multimap

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  map.rs  serde.rs  set.rs
src/rayon/: map.rs  mod.rs  set.rs
